<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_v_4d5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <Button
        android:id="@+id/run"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_run_script_file"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/path"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_script_file"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/gl_v_4d5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/run" />

    <Button
        android:id="@+id/path_select"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_select"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/path"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gl_v_4d5"
        app:layout_constraintTop_toTopOf="@+id/path" />

</androidx.constraintlayout.widget.ConstraintLayout>